<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.DashBoardActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:dividerPadding="22dp"
        android:orientation="horizontal"
        android:layout_marginTop="1dp"
        android:showDividers="middle">

        <Button
            android:id="@+id/buttonHome_Id"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:text="@string/home_button"
            android:textColor="@color/colorWhite"
            android:textSize="12sp" />


        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorGray" />


        <Button
            android:id="@+id/buttonChangePass_Id"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:singleLine="true"
            android:textColor="@color/colorWhite"
            android:text="@string/change_password_button"
            android:textSize="12sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorGray" />

        <Button
            android:id="@+id/buttonLogOut_Id"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:textColor="@color/colorWhite"
            android:background="@drawable/button_selector"
            android:text="@string/log_out_button"
            android:textSize="12sp" />
    </LinearLayout>
    <View android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGray" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:dividerPadding="22dp"
        android:orientation="horizontal"
        android:showDividers="middle">

        <Button
            android:id="@+id/buttonOpenJob_Id"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:textColor="@color/colorWhite"
            android:background="@drawable/button_selector"
            android:text="@string/open_jobs_button"
            android:textSize="12sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorGray" />

        <Button
            android:id="@+id/buttonAssignedJob_Id"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:textColor="@color/colorWhite"
            android:background="@drawable/button_selector"
            android:text="@string/assigned_jobs_button"
            android:textSize="12sp" />
    </LinearLayout>
    <View android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGray" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonSignOff_Id"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:textColor="@color/colorWhite"
            android:background="@drawable/button_selector"
            android:text="@string/sign_off_button"
            android:textSize="12sp" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerDashBord_Id"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:alwaysDrawnWithCache="true"
        android:scrollbars="none" />


</LinearLayout>
